Get rid of version warning in Jenkins
Using a custom property in the version tag causes the following warning in Jenkins:
    Some problems were encountered while building the effective model for training:employees-maven:jar:1.0.0-6
    'version' contains an expression but should be a constant. @ training:employees-maven:1.0.0-${build.number}, /var/jenkins_home/workspace/employees/pom.xml, line 15, column 14
    It is highly recommended to fix these problems because they threaten the stability of your build.
    For this reason, future Maven versions might no longer support building such malformed projects.
It is however allowed to use a few pre-defined properties, like revision, sha1 or changelist.

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>training</groupId>
     <artifactId>employees-maven</artifactId>
-    <version>1.0.0-${build.number}</version>
+    <version>${revision}</version>
 
     <properties>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
@@ -27,6 +27,7 @@
         </sonar.junit.reportPaths>
 
         <build.number>unknown</build.number>
+        <revision>1.0.0-${build.number}</revision>
     </properties>
 
     <dependencies>
